ui/apps/io.ox/core/folder/style.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * © 2014 Open-Xchange Inc., Tarrytown, NY, USA. info@open-xchange.com
 *
 * @author Matthias Biggeleben <matthias.biggeleben@open-xchange.com>
 */

.folder-tree {

    padding: 7px 0;
    overflow: auto;
    background-color: @foldertree-sidepanel-background;
    .user-select(none);

    // font weights
    @normal : 300;
    @bold   : 700;

    // custom mobile values
    @mobile-line-height: 40px;
    @mobile-arrow-size: 20px;
    @mobile-label-size: 15px;

    // width fix
    .tree-container {
        min-width: 100%;
        display: table;
        padding: 0;
        margin: 0;
        outline: 0;
    }

    .folder {

        line-height: 30px;
        overflow: visible;
        white-space: nowrap;
        width: 100%;
        display: block;
        cursor: pointer;
        outline: 0;

        &.selected > .folder-node > .folder-options {
            display: inline-block;
        }

        &.empty {
            display: none;
        }

        &.disabled > .folder-node > .folder-label {
            opacity: 0.5;
            font-style: italic;
        }
    }

    &.visible-selection {

        .selected > .folder-node {
            background-color: @foldertree-selected-background;
            * {
                color: @foldertree-selected-label-color;
            }
        }

        .selectable > .folder-node:hover, .selectable.dnd-over > .folder-node {
            background-color: rgba(0, 0, 0, 0.05);
        }

        .selectable:focus > .folder-node {

            background-color: @foldertree-selected-focus-background;
            * {
                color: @foldertree-focused-label-color;
            }
            .folder-counter {
                color: rgba(255, 255, 255, 0.50);
            }
            .folder-options {
                background-color: rgba(0, 0, 0, 0.20);
            }
        }
    }

    .folder-node {

        .folder-arrow {

            color: #777;
            display: inline-block;
            padding-left: 14px;
            width: 40px;
        }

        .folder-label, .folder-counter, .folder-options {
            font-weight: @normal;
            display: inline-block;
            -webkit-font-smoothing: antialiased;
            margin: 0 14px 0 0;
            &:empty { margin: 0; }
        }

        .folder-label {

            &:first-child { // needed when arrows are hidden
                margin-left: 14px;
            }
        }

        .folder-counter {
            color: #08c;
            font-weight: @bold;
        }

        .folder-options {

            padding: 0 12px;
            line-height: 30px;
            background-color: rgba(0, 0, 0, 0.05);
            outline: 0;
            display: none;

            i { line-height: inherit; }

            &:focus {
                i { color: white; }
                background-color: @foldertree-selected-focus-background;
            }
        }

        .folder-checkbox {
            display: inline-block;
            margin: 0 14px 0 0;
        }

        .folder-shared {
            color: rgba(0, 0, 0, 0.30);
            &:before { content: '\f007'; } // fa-user
        }

        .folder-pubsub {
            color: rgba(0, 0, 0, 0.30);
            &:before { content: '\f0c2'; } // fa-cloud
        }
    }

    .shared {

        .folder-options {
            line-height: 24px;
            margin-top: 3px;
        }

        .owner {
            font-size: 12px;
            padding-left: 40px;
            margin-top: -7px;
        }
    }

    .subfolders {
        margin: 0;
        padding: 0;
        list-style-type: none;
        min-height: 30px;
        display: none;
    }

    .folder.open > .subfolders {
        display: block;
    }

    .unified-folders, .standard-folders, .favorites, .remote-accounts {
        margin-bottom: 14px;
    }

    .favorites > .folder-node > .folder-label {
        font-weight: 500;
    }

    // sections in flat folder views
    .folder.section {

        &.open {
            margin-bottom: 20px;
        }

        &:first-child {
            margin-top: 0;
        }

        & > .folder-node > .folder-label {
            font-weight: @bold;
        }
    }

    // sections links
    .links {

        font-weight: @normal;
        margin: 14px 0 20px 40px;

        &:empty {
            margin: 0;
        }

        & > div {
            margin-bottom: 7px;
        }
    }

    .mobile-edit-mode & {
        .selectable:not(.virtual) {
            .folder-label {
                color: @link-color;
                text-decoration: underline;
            }
        }
    }

    // demo stuff

    h2 {
        font-size: 14px;
        font-weight: @bold;
        line-height: 30px;
        margin: 0 0 7px 0;
        padding: 0 7px 0 14px;
    }

    section {
        margin: 14px 0;
        padding: 0 14px;
    }

    .window-sidepanel.top-toolbar & { top: 45px; }
    .window-sidepanel.bottom-toolbar & { bottom: 45px; }

    @media(max-width: 480px), (max-device-width: 480px) {
        .folder {
            line-height: @mobile-line-height;
        }

        .folder-node {
            .folder-arrow {
                font-size: @mobile-arrow-size;
            }

            .folder-label, .folder-counter, .folder-options {
                font-size: @mobile-label-size;
            }
        }
    }

}

